--- a/Whitepaper/index.html
+++ b/Whitepaper/index.html
@@ -180,7 +180,7 @@
                 </tr>
                 <tr>
                     <td>Asset Tokenization</td>
-                    <td>Wrap existing tokens (e.g., BONE) into new tokens for specific ecosystems, such as in-game currencies or DeFi protocols.</td>
+                    <td>Wrap existing tokens (e.g., FEED) into new tokens for specific ecosystems, such as in-game currencies or DeFi protocols.</td>
                 </tr>
                 <tr>
                     <td>Community Tokens</td>
